tests/tests/c_docs_none.h

typedef enum enumdocumented
    {
    ENUMDOCUMENTED_A = 0,
    ENUMDOCUMENTED_B = 1,
    ENUMDOCUMENTED_C = 2,
    } enumdocumented;
typedef struct simpleservice simpleservice;
typedef struct simpleservicelifetime simpleservicelifetime;
typedef enum ffierror
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_DELEGATE = 300,
    FFIERROR_FAIL = 400,
    } ffierror;
typedef struct structdocumented
    {
    float x;
    } structdocumented;
typedef uint8_t (*fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint32_t (*mycallback)(uint32_t value);
typedef ffierror (*sumdelegatereturn)(int32_t x, int32_t y);
typedef struct slicebool
    {
    const uint8_t* data;
    uint64_t len;
    } slicebool;
typedef struct slicei32
    {
    const int32_t* data;
    uint64_t len;
    } slicei32;
typedef struct sliceu32
    {
    const uint32_t* data;
    uint64_t len;
    } sliceu32;
typedef struct sliceu8
    {
    const uint8_t* data;
    uint64_t len;
    } sliceu8;
typedef struct slicemutu32
    {
    const uint32_t* data;
    uint64_t len;
    } slicemutu32;
typedef struct slicemutu8
    {
    const uint8_t* data;
    uint64_t len;
    } slicemutu8;
uint8_t callback(fptr_fn_u8_rval_u8 callback, uint8_t value);
enumdocumented documented(structdocumented x);
ffierror panics();
ffierror simple_service_new_failing(simpleservice** context, uint8_t some_value);
ffierror simple_service_method_result(const simpleservice* context, uint32_t anon1);
uint32_t simple_service_method_value(const simpleservice* context, uint32_t x);
void simple_service_method_void(const simpleservice* context);
void simple_service_method_void2(const simpleservice* context);
uint8_t simple_service_method_mut_self(simpleservice* context, sliceu8 slice);
void simple_service_method_mut_self_void(simpleservice* context, slicebool slice);
uint8_t simple_service_method_mut_self_ref(simpleservice* context, const uint8_t* x, uint8_t* y);
uint8_t simple_service_method_mut_self_ref_slice(simpleservice* context, const uint8_t* x, uint8_t* y, sliceu8 slice);
uint8_t simple_service_method_mut_self_ref_slice_limited(simpleservice* context, const uint8_t* x, uint8_t* y, sliceu8 slice, sliceu8 slice2);
ffierror simple_service_method_mut_self_ffi_error(simpleservice* context, slicemutu8 slice);
ffierror simple_service_method_mut_self_no_error(simpleservice* context, slicemutu8 slice);
sliceu32 simple_service_return_slice(simpleservice* context);
slicemutu32 simple_service_return_slice_mut(simpleservice* context);
const char* simple_service_return_string(simpleservice* context);
ffierror simple_service_method_void_ffi_error(simpleservice* context);
ffierror simple_service_method_callback(simpleservice* context, mycallback callback);
ffierror simple_service_method_callback_ffi_return(simpleservice* context, sumdelegatereturn callback);
ffierror simple_service_method_callback_ffi_return_with_slice(simpleservice* context, sumdelegatereturn callback, slicei32 input);
ffierror simple_service_lifetime_destroy(simpleservicelifetime** context);