tests/tests/csharp_reference_project_safe/Interop.cs


        public static void simple_service_new_failing_checked(ref IntPtr context, byte some_value)
        {
            var rval = simple_service_new_failing(ref context, some_value);;
            if (rval != FFIError.Ok)
            {
                throw new InteropException<FFIError>(rval);
            }
        }

        /// Methods returning a Result<(), _> are the default and do not
        /// need annotations.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_result")]
        public static extern FFIError simple_service_method_result(IntPtr context, uint anon1);

        /// Methods returning a Result<(), _> are the default and do not
        /// need annotations.
        public static void simple_service_method_result_checked(IntPtr context, uint anon1)
        {
            var rval = simple_service_method_result(context, anon1);;
            if (rval != FFIError.Ok)
            {
                throw new InteropException<FFIError>(rval);
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_value")]
        public static extern uint simple_service_method_value(IntPtr context, uint x);

        /// This method should be documented.
        ///
        /// Multiple lines.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_void")]
        public static extern void simple_service_method_void(IntPtr context);

        /// Regular void functions don't need an annotation.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_void2")]
        public static extern void simple_service_method_void2(IntPtr context);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self")]
        public static extern byte simple_service_method_mut_self(IntPtr context, SliceU8 slice);

        public static byte simple_service_method_mut_self(IntPtr context, byte[] slice)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceU8(slice_pinned, (ulong) slice.Length);
            try
            {
                return simple_service_method_mut_self(context, slice_slice);;
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        /// Single line.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_void")]
        public static extern void simple_service_method_mut_self_void(IntPtr context, SliceBool slice);

        /// Single line.
        public static void simple_service_method_mut_self_void(IntPtr context, Bool[] slice)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceBool(slice_pinned, (ulong) slice.Length);
            try
            {
                simple_service_method_mut_self_void(context, slice_slice);;
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_ref")]
        public static extern byte simple_service_method_mut_self_ref(IntPtr context, ref byte x, out byte y);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_ref_slice")]
        public static extern byte simple_service_method_mut_self_ref_slice(IntPtr context, ref byte x, out byte y, SliceU8 slice);

        public static byte simple_service_method_mut_self_ref_slice(IntPtr context, ref byte x, out byte y, byte[] slice)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceU8(slice_pinned, (ulong) slice.Length);
            try
            {
                return simple_service_method_mut_self_ref_slice(context, ref x, out y, slice_slice);;
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_ref_slice_limited")]
        public static extern byte simple_service_method_mut_self_ref_slice_limited(IntPtr context, ref byte x, out byte y, SliceU8 slice, SliceU8 slice2);

        public static byte simple_service_method_mut_self_ref_slice_limited(IntPtr context, ref byte x, out byte y, byte[] slice, byte[] slice2)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceU8(slice_pinned, (ulong) slice.Length);
            var slice2_pinned = GCHandle.Alloc(slice2, GCHandleType.Pinned);
            var slice2_slice = new SliceU8(slice2_pinned, (ulong) slice2.Length);
            try
            {
                return simple_service_method_mut_self_ref_slice_limited(context, ref x, out y, slice_slice, slice2_slice);;
            }
            finally
            {
                slice_pinned.Free();
                slice2_pinned.Free();
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_ffi_error")]
        public static extern FFIError simple_service_method_mut_self_ffi_error(IntPtr context, SliceMutU8 slice);

        public static void simple_service_method_mut_self_ffi_error(IntPtr context, byte[] slice)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceMutU8(slice_pinned, (ulong) slice.Length);
            try
            {
                var rval = simple_service_method_mut_self_ffi_error(context, slice_slice);;
                if (rval != FFIError.Ok)
                {
                    throw new InteropException<FFIError>(rval);
                }
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_mut_self_no_error")]
        public static extern FFIError simple_service_method_mut_self_no_error(IntPtr context, SliceMutU8 slice);

        public static void simple_service_method_mut_self_no_error(IntPtr context, byte[] slice)
        {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new SliceMutU8(slice_pinned, (ulong) slice.Length);
            try
            {
                var rval = simple_service_method_mut_self_no_error(context, slice_slice);;
                if (rval != FFIError.Ok)
                {
                    throw new InteropException<FFIError>(rval);
                }
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        /// Warning, you _must_ discard the returned slice object before calling into this service
        /// again, as otherwise undefined behavior might happen.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_return_slice")]
        public static extern SliceU32 simple_service_return_slice(IntPtr context);

        /// Warning, you _must_ discard the returned slice object before calling into this service
        /// again, as otherwise undefined behavior might happen.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_return_slice_mut")]
        public static extern SliceMutU32 simple_service_return_slice_mut(IntPtr context);

        /// This function has no panic safeguards. It will be a bit faster to
        /// call, but if it panics your host app will be in an undefined state.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_return_string")]
        public static extern IntPtr simple_service_return_string(IntPtr context);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_void_ffi_error")]
        public static extern FFIError simple_service_method_void_ffi_error(IntPtr context);

        public static void simple_service_method_void_ffi_error_checked(IntPtr context)
        {
            var rval = simple_service_method_void_ffi_error(context);;
            if (rval != FFIError.Ok)
            {
                throw new InteropException<FFIError>(rval);
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_callback")]
        public static extern FFIError simple_service_method_callback(IntPtr context, MyCallback callback);

        public static void simple_service_method_callback_checked(IntPtr context, MyCallback callback)
        {
            var rval = simple_service_method_callback(context, callback);;
            if (rval != FFIError.Ok)
            {
                throw new InteropException<FFIError>(rval);
            }
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_callback_ffi_return")]
        public static extern FFIError simple_service_method_callback_ffi_return(IntPtr context, SumDelegateReturn callback);

        public static void simple_service_method_callback_ffi_return_checked(IntPtr context, SumDelegateReturn callback)
        {
            var callback_safe_delegate = new SumDelegateReturnExceptionSafe(callback);
            var rval = simple_service_method_callback_ffi_return(context, callback_safe_delegate.Call);;
            if (rval != FFIError.Ok)
            {
                throw new InteropException<FFIError>(rval);
            }
            callback_safe_delegate.Rethrow();
        }

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_method_callback_ffi_return_with_slice")]
        public static extern FFIError simple_service_method_callback_ffi_return_with_slice(IntPtr context, SumDelegateReturn callback, SliceI32 input);

        public static void simple_service_method_callback_ffi_return_with_slice(IntPtr context, SumDelegateReturn callback, int[] input)
        {
            var callback_safe_delegate = new SumDelegateReturnExceptionSafe(callback);
            var input_pinned = GCHandle.Alloc(input, GCHandleType.Pinned);
            var input_slice = new SliceI32(input_pinned, (ulong) input.Length);
            try
            {
                var rval = simple_service_method_callback_ffi_return_with_slice(context, callback_safe_delegate.Call, input_slice);;
                if (rval != FFIError.Ok)
                {
                    throw new InteropException<FFIError>(rval);
                }
                callback_safe_delegate.Rethrow();
            }
            finally
            {
                input_pinned.Free();
            }
        }

        /// Destroys the given instance.
        ///
        /// # Safety
        ///
        /// The passed parameter MUST have been created with the corresponding init function;
        /// passing any other value results in undefined behavior.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_lifetime_destroy")]
        public static extern FFIError simple_service_lifetime_destroy(ref IntPtr context);
